# onetoast

./: .gitignore  README.md  pyproject.toml
tests/: test_core.py
