[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onetoast"
version = "0.1.0"
description = "A Python package distributed with pip."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Levi 김 태선 Brown", email = "levi@taeson.co" }
]
keywords = ["onetoast", "darwin", "toast", "notification", "notify", "linux toast", "windows toast"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/aghastmuffin/onetoast"
Issues = "https://github.com/aghastmuffin/onetoast/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "build>=1.2.1",
  "twine>=5.0.0",
  "ruff>=0.6.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
